[gd_scene load_steps=10 format=3 uid="uid://pyimsn2fnsa3"]

[ext_resource type="Script" uid="uid://csqqg3rre416e" path="res://addons/material_maker/engine/nodes/gen_sdf.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://bf5k7ed5a8ny1" path="res://material_maker/windows/sdf_builder/preview_2d.tscn" id="2"]
[ext_resource type="Script" uid="uid://jv4kbv17b3o8" path="res://material_maker/windows/sdf_builder/sdf_builder.gd" id="3"]
[ext_resource type="Script" uid="uid://t8ntu7l3y5wa" path="res://material_maker/windows/sdf_builder/sdf_builder_tree.gd" id="4"]
[ext_resource type="PackedScene" uid="uid://bsdj8r6ur5sja" path="res://material_maker/windows/sdf_builder/preview_3d.tscn" id="5"]
[ext_resource type="Texture2D" uid="uid://c0j4px4n72di5" path="res://material_maker/icons/icons.tres" id="6"]

[sub_resource type="Shader" id="1"]
resource_local_to_scene = true
code = "shader_type canvas_item;

void fragment() {
	COLOR = vec4(0.0, 0.0, 0.0, 1.0);
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pgcwv"]
resource_local_to_scene = true
shader = SubResource("1")

[sub_resource type="AtlasTexture" id="3"]
atlas = ExtResource("6")
region = Rect2(48, 0, 16, 16)

[node name="Control" type="Window"]
position = Vector2i(0, 36)
exclusive = true
script = ExtResource("3")

[node name="TopContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(800, 400)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Toolbar" type="HBoxContainer" parent="TopContainer"]
layout_mode = 2

[node name="Main" type="HBoxContainer" parent="TopContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Tree" type="Tree" parent="TopContainer/Main"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3
select_mode = 1
script = ExtResource("4")

[node name="Preview2D" parent="TopContainer/Main" instance=ExtResource("2")]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_pgcwv")
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
control_target = NodePath("../../..")

[node name="Preview3D" parent="TopContainer/Main" instance=ExtResource("5")]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_stretch_ratio = 2.0
control_target = NodePath("../../..")

[node name="ScrollContainer" type="ScrollContainer" parent="TopContainer/Main"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="Parameters" type="VBoxContainer" parent="TopContainer/Main/ScrollContainer"]
layout_mode = 2

[node name="NodeParametersButton" type="CheckBox" parent="TopContainer/Main/ScrollContainer/Parameters"]
unique_name_in_owner = true
layout_mode = 2
text = "Node Parameters"

[node name="NodeParameters" type="GridContainer" parent="TopContainer/Main/ScrollContainer/Parameters"]
unique_name_in_owner = true
layout_mode = 2
columns = 7

[node name="Button" type="Button" parent="TopContainer/Main/ScrollContainer/Parameters"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
icon = SubResource("3")

[node name="HSeparator" type="HSeparator" parent="TopContainer/Main/ScrollContainer/Parameters"]
layout_mode = 2

[node name="ItemParametersButton" type="CheckBox" parent="TopContainer/Main/ScrollContainer/Parameters"]
unique_name_in_owner = true
layout_mode = 2
text = "Item Parameters"

[node name="ItemParameters" type="GridContainer" parent="TopContainer/Main/ScrollContainer/Parameters"]
unique_name_in_owner = true
layout_mode = 2
columns = 3

[node name="Buttons" type="HBoxContainer" parent="TopContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 5

[node name="Apply" type="Button" parent="TopContainer/Buttons"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Apply"

[node name="OK" type="Button" parent="TopContainer/Buttons"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "OK"

[node name="Cancel" type="Button" parent="TopContainer/Buttons"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Cancel"

[node name="GenSDF" type="Node" parent="."]
script = ExtResource("1")
editor = true

[connection signal="close_requested" from="." to="." method="_on_Cancel_pressed"]
[connection signal="minimum_size_changed" from="TopContainer" to="." method="_on_VBoxContainer_minimum_size_changed"]
[connection signal="button_clicked" from="TopContainer/Main/Tree" to="." method="_on_tree_button_clicked"]
[connection signal="drop_item" from="TopContainer/Main/Tree" to="." method="_on_Tree_drop_item"]
[connection signal="gui_input" from="TopContainer/Main/Tree" to="." method="_on_Tree_gui_input"]
[connection signal="item_collapsed" from="TopContainer/Main/Tree" to="." method="_on_Tree_item_collapsed"]
[connection signal="item_edited" from="TopContainer/Main/Tree" to="." method="_on_Tree_item_edited"]
[connection signal="item_selected" from="TopContainer/Main/Tree" to="." method="_on_Tree_item_selected"]
[connection signal="toggled" from="TopContainer/Main/ScrollContainer/Parameters/NodeParametersButton" to="." method="_on_NodeParams_toggled"]
[connection signal="pressed" from="TopContainer/Main/ScrollContainer/Parameters/Button" to="." method="create_node_parameter"]
[connection signal="toggled" from="TopContainer/Main/ScrollContainer/Parameters/ItemParametersButton" to="." method="_on_ItemParams_toggled"]
[connection signal="pressed" from="TopContainer/Buttons/Apply" to="." method="_on_Apply_pressed"]
[connection signal="pressed" from="TopContainer/Buttons/OK" to="." method="_on_OK_pressed"]
[connection signal="pressed" from="TopContainer/Buttons/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="parameter_changed" from="GenSDF" to="." method="on_parameter_changed"]
